# ewasm-workshop

./: Cargo.toml  Makefile  README.md
smartcontract/: Cargo.toml  README.md
smartcontract/src/: lib.rs
src/: main.rs  utils.rs
